fixed spacing just slightly on counters and h4's

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -33,7 +33,8 @@ p {
 }
 
 h4 {
-    margin-bottom: 20px;
+    margin-bottom: 10px;
+    margin-top: 10px;
 }
 
 .sticky-alert {
@@ -135,7 +136,7 @@ color: #000000;
 /* MY OWN NUMBER COUNTER INPUT */
 .my-counter-div {
     margin-bottom: 10px;
-    /* margin-top: 10px; */
+    margin-top: 10px;
 }
 .my-counter {
     border: 1px solid #ced4da;
